# dmut

./: .gitignore  CMakeLists.txt  LICENCE.txt
dmut/: CMakeLists.txt
dmut/src/: CMakeLists.txt  dmut.cpp  dmut.h
include/: ConstrainedType.hpp  NonNullOwningPointer.hpp
src/: TestNonNullOwningPointer.cpp  dmut.cpp
